Working on inline phonemes and phoneme table in web ui
